Add lexical diversity analysis

--- a/lexical_density.ipynb
+++ b/lexical_density.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "f7448ff7",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,7 @@
     "    output_path=\"./data/Fakespeak-ENG/Analysis_output/Fakespeak_lexical_density.xlsx\",\n",
     "    sheet_name=\"Working\",\n",
     "    usecols=['ID', 'combinedLabel', 'originalTextType', 'originalBodyText', 'originalDateYear'],\n",
-    "    cols_to_save=[\"ID\", \"combinedLabel\", \"originalTextType\", \"originalDateYear\", \"lexical_density\"]\n",
+    "    cols_to_save=[\"ID\", \"combinedLabel\", \"originalTextType\", \"originalBodyText\", \"lexical_density\"]\n",
     ")\n",
     "\n",
     "misinfotext_config = DatasetConfig(\n",
@@ -56,7 +56,7 @@
     "    output_path=\"./data/MisInfoText/Analysis_output/MisInfoText_lexical_density.xlsx\",\n",
     "    sheet_name=\"Working\",\n",
     "    usecols=None,\n",
-    "    cols_to_save=[\"factcheckURL\", \"originalURL\", \"originalTextType\", \"originalDateYear\", \"lexical_density\"]\n",
+    "    cols_to_save=[\"factcheckURL\", \"originalURL\", \"originalTextType\", \"originalBodyText\", \"lexical_density\"]\n",
     ")"
    ]
   },
