Get quote extraction from gender gap tracker

--- a/lexical_density.ipynb
+++ b/lexical_density.ipynb
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "099b0097",
    "metadata": {},
    "outputs": [
@@ -214,6 +214,27 @@
    ],
    "source": [
     "nlp = spacy.load('en_core_web_md')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "2bdc0661",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "spacy.lang.en.English"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(nlp)"
    ]
   },
   {
