Add multiprocessing quote extraction

--- a/quote_extraction.ipynb
+++ b/quote_extraction.ipynb
@@ -8,8 +8,7 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from quote_extractor import QuoteExtractor\n",
-    "from utils import preprocess_text, MULTI_PARAGRAPH_QUOTE_MARKER"
+    "from quote_extractor import QuoteExtractor"
    ]
   },
   {
@@ -329,338 +328,21 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "6367fd54",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[]"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "test_row = dataset_df.iloc[11]\n",
-    "quote_extractor.run(test_row[using_dataset.id_col], test_row[\"originalBodyText\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "bbe5bd4b",
+   "id": "d98ec6db",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Miami, FL – U.S. Senate candidate Marco Rubio today issued the following statement regarding Governor Charlie Crist’s veto of HB 1143:.\n",
-      " .\n",
-      " /MULTI-PARAGRAPH-QUOTE/\"Once again, Charlie Crist has put politics ahead of principled policy-making. Not only would this commonsense measure have provided women with vital information as they make a critical decision, but now Governor Crist’s veto also clears the way for taxpayer funding of abortion in Florida. This veto will now make it harder for Florida to fight Obamacare, since the bill would have enabled our state to opt out of the abortion coverage mandate in the federal health care law.\n",
-      " .\n",
-      " Even those who agree with the outcome of the Governor’s decision should be alarmed that an issue as serious and deserving of sober deliberation as this one was treated in such a calculating, political manner. Florida deserves a U.S. senator who will think issues through and let principles, not the politics of the moment, guide their decisions. Not surprisingly, his latest decision is only the latest in a long litany of examples in which Charlie Crist has broken his word to Floridians.\"//MULTI-PARAGRAPH-QUOTE/\n"
+      "Preprocessing texts...\n",
+      "Creating spacy docs...\n",
+      "Extracting quotes\n"
      ]
     }
    ],
    "source": [
-    "p = preprocess_text(test_row[\"originalBodyText\"])\n",
-    "print(p)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "df586e41",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import spacy\n",
-    "from spacy.tokens.token import Token\n",
-    "from spacy.tokens.doc import Doc\n",
-    "nlp = spacy.load(\"en_core_web_lg\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "f5042b8e",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Miami, FL – U.S. Senate candidate Marco Rubio today issued the following statement regarding Governor Charlie Crist’s veto of HB 1143:.\n",
-       " .\n",
-       " /MULTI-PARAGRAPH-QUOTE/\"Once again, Charlie Crist has put politics ahead of principled policy-making. Not only would this commonsense measure have provided women with vital information as they make a critical decision, but now Governor Crist’s veto also clears the way for taxpayer funding of abortion in Florida. This veto will now make it harder for Florida to fight Obamacare, since the bill would have enabled our state to opt out of the abortion coverage mandate in the federal health care law.\n",
-       " .\n",
-       " Even those who agree with the outcome of the Governor’s decision should be alarmed that an issue as serious and deserving of sober deliberation as this one was treated in such a calculating, political manner. Florida deserves a U.S. senator who will think issues through and let principles, not the politics of the moment, guide their decisions. Not surprisingly, his latest decision is only the latest in a long litany of examples in which Charlie Crist has broken his word to Floridians.\"//MULTI-PARAGRAPH-QUOTE/"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "d = nlp(p)\n",
-    "d"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "7e4cb2a4",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Miami , \n",
-      ", , \n",
-      "FL , \n",
-      "– , \n",
-      "U.S. , \n",
-      "Senate , \n",
-      "candidate , \n",
-      "Marco , \n",
-      "Rubio , \n",
-      "today , \n",
-      "issued , \n",
-      "the , \n",
-      "following , \n",
-      "statement , \n",
-      "regarding , \n",
-      "Governor , \n",
-      "Charlie , \n",
-      "Crist , \n",
-      "’s , \n",
-      "veto , \n",
-      "of , \n",
-      "HB , \n",
-      "1143 , \n",
-      ": , \n",
-      ". , \n",
-      "\n",
-      "  , \n",
-      ". , \n",
-      "\n",
-      "  , \n",
-      "/MULTI , \n",
-      "- , \n",
-      "PARAGRAPH , \n",
-      "- , \n",
-      "QUOTE/\"Once , \n",
-      "again , \n",
-      ", , \n",
-      "Charlie , \n",
-      "Crist , \n",
-      "has , \n",
-      "put , \n",
-      "politics , \n",
-      "ahead , \n",
-      "of , \n",
-      "principled , \n",
-      "policy , \n",
-      "- , \n",
-      "making , \n",
-      ". , \n",
-      "Not , \n",
-      "only , \n",
-      "would , \n",
-      "this , \n",
-      "commonsense , \n",
-      "measure , \n",
-      "have , \n",
-      "provided , \n",
-      "women , \n",
-      "with , \n",
-      "vital , \n",
-      "information , \n",
-      "as , \n",
-      "they , \n",
-      "make , \n",
-      "a , \n",
-      "critical , \n",
-      "decision , \n",
-      ", , \n",
-      "but , \n",
-      "now , \n",
-      "Governor , \n",
-      "Crist , \n",
-      "’s , \n",
-      "veto , \n",
-      "also , \n",
-      "clears , \n",
-      "the , \n",
-      "way , \n",
-      "for , \n",
-      "taxpayer , \n",
-      "funding , \n",
-      "of , \n",
-      "abortion , \n",
-      "in , \n",
-      "Florida , \n",
-      ". , \n",
-      "This , \n",
-      "veto , \n",
-      "will , \n",
-      "now , \n",
-      "make , \n",
-      "it , \n",
-      "harder , \n",
-      "for , \n",
-      "Florida , \n",
-      "to , \n",
-      "fight , \n",
-      "Obamacare , \n",
-      ", , \n",
-      "since , \n",
-      "the , \n",
-      "bill , \n",
-      "would , \n",
-      "have , \n",
-      "enabled , \n",
-      "our , \n",
-      "state , \n",
-      "to , \n",
-      "opt , \n",
-      "out , \n",
-      "of , \n",
-      "the , \n",
-      "abortion , \n",
-      "coverage , \n",
-      "mandate , \n",
-      "in , \n",
-      "the , \n",
-      "federal , \n",
-      "health , \n",
-      "care , \n",
-      "law , \n",
-      ". , \n",
-      "\n",
-      "  , \n",
-      ". , \n",
-      "\n",
-      "  , \n",
-      "Even , \n",
-      "those , \n",
-      "who , \n",
-      "agree , \n",
-      "with , \n",
-      "the , \n",
-      "outcome , \n",
-      "of , \n",
-      "the , \n",
-      "Governor , \n",
-      "’s , \n",
-      "decision , \n",
-      "should , \n",
-      "be , \n",
-      "alarmed , \n",
-      "that , \n",
-      "an , \n",
-      "issue , \n",
-      "as , \n",
-      "serious , \n",
-      "and , \n",
-      "deserving , \n",
-      "of , \n",
-      "sober , \n",
-      "deliberation , \n",
-      "as , \n",
-      "this , \n",
-      "one , \n",
-      "was , \n",
-      "treated , \n",
-      "in , \n",
-      "such , \n",
-      "a , \n",
-      "calculating , \n",
-      ", , \n",
-      "political , \n",
-      "manner , \n",
-      ". , \n",
-      "Florida , \n",
-      "deserves , \n",
-      "a , \n",
-      "U.S. , \n",
-      "senator , \n",
-      "who , \n",
-      "will , \n",
-      "think , \n",
-      "issues , \n",
-      "through , \n",
-      "and , \n",
-      "let , \n",
-      "principles , \n",
-      ", , \n",
-      "not , \n",
-      "the , \n",
-      "politics , \n",
-      "of , \n",
-      "the , \n",
-      "moment , \n",
-      ", , \n",
-      "guide , \n",
-      "their , \n",
-      "decisions , \n",
-      ". , \n",
-      "Not , \n",
-      "surprisingly , \n",
-      ", , \n",
-      "his , \n",
-      "latest , \n",
-      "decision , \n",
-      "is , \n",
-      "only , \n",
-      "the , \n",
-      "latest , \n",
-      "in , \n",
-      "a , \n",
-      "long , \n",
-      "litany , \n",
-      "of , \n",
-      "examples , \n",
-      "in , \n",
-      "which , \n",
-      "Charlie , \n",
-      "Crist , \n",
-      "has , \n",
-      "broken , \n",
-      "his , \n",
-      "word , \n",
-      "to , \n",
-      "Floridians , \n",
-      ". , \n",
-      "\"//MULTI , \n",
-      "- , \n",
-      "PARAGRAPH , \n",
-      "- , \n",
-      "QUOTE/ , \n"
-     ]
-    }
-   ],
-   "source": [
-    "for token in d:\n",
-    "    print(token.text, \", \")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "deee2a0c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "quote_annotations = dataset_df.apply(\n",
-    "    lambda row: quote_extractor.run(row[using_dataset.id_col], row[\"originalBodyText\"]), \n",
-    "    axis=1\n",
-    ")"
+    "quote_annotations = quote_extractor.run_multiple(dataset_df[using_dataset.id_col], dataset_df[\"originalBodyText\"])"
    ]
   },
   {
